@@ -11,13 +11,13 @@ define( function( require ) {
   // imports
   var MolarityModel = require( 'MOLARITY/molarity/model/MolarityModel' );
   var MolarityView = require( 'MOLARITY/molarity/view/MolarityView' );
-  var MStrings = require( 'MOLARITY/molarity/MStrings' );
   var Rectangle = require( 'SCENERY/nodes/Rectangle' );
+  var strings = require( 'MOLARITY/molarity-strings' );
   var Vector2 = require( 'DOT/Vector2' );
 
   function MolarityScreen() {
 
-    this.name = MStrings.molarity;
+    this.name = strings.molarity;
     this.backgroundColor = 'white';
 
     this.createModel = function() {
