@@ -11,11 +11,11 @@ define( function( require ) {
   // imports
   var assert = require( 'ASSERT/assert' )( 'molarity' );
   var Color = require( 'SCENERY/util/Color' );
-  var MStrings = require( 'MOLARITY/molarity/MStrings' );
   var MSymbols = require( 'MOLARITY/molarity/MSymbols' );
   var Range = require( 'DOT/Range' );
   var Solute = require( 'MOLARITY/molarity/model/Solute' );
   var Solution = require( 'MOLARITY/molarity/model/Solution' );
+  var strings = require( 'MOLARITY/molarity-strings' );
   var Water = require( 'MOLARITY/molarity/model/Water' );
 
   function MolarityModel() {
@@ -24,15 +24,15 @@ define( function( require ) {
     var thisModel = this;
 
     thisModel.solutes = [
-      new Solute( MStrings.drinkMix, MSymbols.DRINK_MIX, 5.95, new Color( 255, 225, 225 ), Color.RED ),
-      new Solute( MStrings.cobaltIINitrate, MSymbols.COBALT_II_NITRATE, 5.65, new Color( 255, 225, 225 ), Color.RED ),
-      new Solute( MStrings.cobaltChloride, MSymbols.COBALT_CHLORIDE, 4.35, new Color( 255, 242, 242 ), new Color( 255, 106, 106 ) ),
-      new Solute( MStrings.potassiumDichromate, MSymbols.POTASSIUM_DICHROMATE, 0.50, new Color( 255, 232, 210 ), new Color( 255, 127, 0 ) ),
-      new Solute( MStrings.goldIIIChloride, MSymbols.GOLD_III_CHLORIDE, 2.25, new Color( 255, 255, 199 ), new Color( 255, 215, 0 ) ),
-      new Solute( MStrings.potassiumChromate, MSymbols.POTASSIUM_CHROMATE, 3.35, new Color( 255, 255, 199 ), Color.YELLOW ),
-      new Solute( MStrings.nickelIIChloride, MSymbols.NICKEL_II_CHLORIDE, 5.2, new Color( 234, 244, 234 ), new Color( 0, 128, 0 ) ),
-      new Solute( MStrings.copperSulfate, MSymbols.COPPER_SULFATE, 1.40, new Color( 222, 238, 255 ), new Color( 30, 144, 255 ) ),
-      new Solute( MStrings.potassiumPermanganate, MSymbols.POTASSIUM_PERMANGANATE, 0.50, new Color( 255, 0, 255 ), new Color( 139, 0, 139 ), { particleColor: Color.BLACK } )
+      new Solute( strings.drinkMix, MSymbols.DRINK_MIX, 5.95, new Color( 255, 225, 225 ), Color.RED ),
+      new Solute( strings.cobaltIINitrate, MSymbols.COBALT_II_NITRATE, 5.65, new Color( 255, 225, 225 ), Color.RED ),
+      new Solute( strings.cobaltChloride, MSymbols.COBALT_CHLORIDE, 4.35, new Color( 255, 242, 242 ), new Color( 255, 106, 106 ) ),
+      new Solute( strings.potassiumDichromate, MSymbols.POTASSIUM_DICHROMATE, 0.50, new Color( 255, 232, 210 ), new Color( 255, 127, 0 ) ),
+      new Solute( strings.goldIIIChloride, MSymbols.GOLD_III_CHLORIDE, 2.25, new Color( 255, 255, 199 ), new Color( 255, 215, 0 ) ),
+      new Solute( strings.potassiumChromate, MSymbols.POTASSIUM_CHROMATE, 3.35, new Color( 255, 255, 199 ), Color.YELLOW ),
+      new Solute( strings.nickelIIChloride, MSymbols.NICKEL_II_CHLORIDE, 5.2, new Color( 234, 244, 234 ), new Color( 0, 128, 0 ) ),
+      new Solute( strings.copperSulfate, MSymbols.COPPER_SULFATE, 1.40, new Color( 222, 238, 255 ), new Color( 30, 144, 255 ) ),
+      new Solute( strings.potassiumPermanganate, MSymbols.POTASSIUM_PERMANGANATE, 0.50, new Color( 255, 0, 255 ), new Color( 139, 0, 139 ), { particleColor: Color.BLACK } )
     ];
 
     thisModel.solution = new Solution( Water, thisModel.solutes[0], MolarityModel.SOLUTE_AMOUNT_RANGE.defaultValue, MolarityModel.SOLUTION_VOLUME_RANGE.defaultValue );
